src/app/metapath/metapath.component.scss
.meta-path {

  box-sizing: border-box;
  * {
    box-sizing: border-box;
  }
  display: flex;
  justify-content: center;
  position: relative;
}

.meta-path-container {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center top;
}

.meta-path {

  .swiper-container {
    width: 100%;
    height: 100%;
  }

  // deep overrides for swiper

  /deep/ {
    .swiper-slide {
      overflow: hidden;

      width: auto !important;
      max-width: none !important;
    }
  }
}

.content {
  overflow: hidden;
}

.swiper-slide {
  height: auto;
  box-sizing: border-box;

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;

  svg {
    height: 100%;
    width: auto;
    margin: 0 auto
  }
}

.swiper-slide-active {
}

.node-next {
  cursor: pointer;
}

.node-current {
  cursor: pointer;
  fill: red;
  stroke: white;
}

.node-done {
  cursor: pointer;
  fill: green;
  stroke: white;
}

.node-next {
  cursor: pointer;
  fill: orange;
  stroke: white;
}

.player {
  fill: deeppink;
}

.player-group {
  pointer-events: none;
}

.player-group.animate {

  .player-group-mask {
    animation: playMask 0.3s steps(3) infinite;
  }
  .player-group-image {
    animation: playPlayer 0.3s steps(3) infinite;
  }
}

@keyframes playPlayer {
  100% {
    transform: translate(-900px, 0);
  }
}

@keyframes playMask {
  100% {
    transform: translate(900px, 0);
  }
}

.button {
  z-index: 1000;
  position: absolute;
  font-size: 20px;
  font-family: Arial;
  color: yellow;
  background-color: green;
  border-radius: 10px;
  padding: 20px 40px;
  border: 3px solid yellow;
}

.button-next {
  bottom: 10px;
  right: 10px;
}

.button-prev {
  bottom: 10px;
  left: 10px;
}

.button-help {
  bottom: 10px;
  left: 0;
  right: 0;
  width: 120px;
  margin: auto;
}

